force-app/main/default/objects/Brand_Activity__c/Brand_Activity__c.object-meta.xml
<CustomObject>
    <label>Brand Activity</label>
    <nameField>
        <label>Brand Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>