force-app/main/default/objects/Brand_Activity__c/fields/Approved_Villages__c.field-meta.xml
<CustomField>
    <fullName>Approved_Villages__c</fullName>
    <label>Approved Villages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>