force-app/main/default/objects/Brand_Activity__c/fields/Asset_Links__c.field-meta.xml
<CustomField>
    <fullName>Asset_Links__c</fullName>
    <label>Asset Links</label>
    <type>Url</type>
</CustomField>