force-app/main/default/objects/Brand_Activity__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <formula>TEXT( Brand__r.Assignment_Type__c )</formula>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>