force-app/main/default/objects/Brand_Activity__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Brand Accounts</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Activities</relationshipLabel>
    <relationshipName>Brand_Village_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>