force-app/main/default/objects/Brand_Activity__c/fields/Brand_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Brand_Activity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brand_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>