force-app/main/default/objects/Brand_Activity__c/fields/Brand_Activity_Ref__c.field-meta.xml
<CustomField>
    <fullName>Brand_Activity_Ref__c</fullName>
    <displayFormat>BA-{000000}</displayFormat>
    <label>Brand Activity Ref</label>
    <type>AutoNumber</type>
</CustomField>