force-app/main/default/objects/Brand_Activity__c/fields/Brand_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Activity_Type__c</fullName>
    <label>Brand Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>New Store</fullName>
            </value>
            <value>
                <fullName>Pop Up</fullName>
            </value>
            <value>
                <fullName>Refit</fullName>
            </value>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>