force-app/main/default/objects/Brand_Activity__c/fields/Brand_Gender__c.field-meta.xml
<CustomField>
    <fullName>Brand_Gender__c</fullName>
    <formula>TEXT(Brand__r.Brand_Gender__c )</formula>
    <label>Brand Gender</label>
    <type>Text</type>
</CustomField>