force-app/main/default/objects/Brand_Activity__c/fields/Brand_Guest_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Brand_Guest_Relevance__c</fullName>
    <formula>IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;North America&quot;), &quot;North America&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;Russia&quot;), &quot;Russia&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;Central &amp; South America&quot;), &quot;Central &amp; South America&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;South East Asia&quot;), &quot;South east Asia&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;India&quot;), &quot;India&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;Europe&quot;), &quot;Europe&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;China&quot;), &quot;China&quot; + BR() , NULL) + 
IF(INCLUDES( Brand__r.Brand_Guest_Relevance__c , &quot;Middle East&quot;), &quot;Middle East&quot;, NULL)</formula>
    <label>Brand Guest Relevance</label>
    <type>Text</type>
</CustomField>