force-app/main/default/objects/Brand_Activity__c/fields/Brand_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Subsegment__c</fullName>
    <formula>TEXT(Brand__r.Brand_Subsegment__c)</formula>
    <label>Brand Subsegment</label>
    <type>Text</type>
</CustomField>