force-app/main/default/objects/Brand_Activity__c/fields/Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Communication_Plan__c</fullName>
    <label>Communication Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>