force-app/main/default/objects/Brand_Activity__c/fields/Expected_Average_Spend__c.field-meta.xml
<CustomField>
    <fullName>Expected_Average_Spend__c</fullName>
    <label>Expected Average Spend</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>