force-app/main/default/objects/Brand_Activity__c/fields/Expected_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_Members__c</fullName>
    <label>Expected New Members</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>