force-app/main/default/objects/Brand_Activity__c/fields/Marketing_Activity_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Budget__c</fullName>
    <label>Marketing Activity Budget</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>