force-app/main/default/objects/Brand_Activity__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Brand Activities</relationshipLabel>
    <relationshipName>Brand_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>