force-app/main/default/objects/Brand_Activity__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>