force-app/main/default/objects/Brand_Activity__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>