force-app/main/default/objects/Brand_Activity__c/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <label>Response Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>