force-app/main/default/objects/Brand_Activity__c/fields/Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Split_Type__c</fullName>
    <label>Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>